update css for register

--- a/style-component/modern_components.html
+++ b/style-component/modern_components.html
@@ -788,6 +788,19 @@
 
                     <hr>
 
+                    <div class="box-title">
+                        Đăng kí tài khoản
+                    </div>
+                    <p class="source">source</p>
+                    <xmp><div class="row-blue align-middle">
+                            <div class="order-number">123</div>
+                            <div class="dossier-number"><span class="red">#</span> 1234567/CV/2432</div>
+                            <div class="receive-number"><span class="text-normal">Mã tiếp nhận:</span> 765r597</div>
+                            <span class="label label-info MLA">Info</span>
+                        </div></xmp>
+
+                    <hr>
+
                     <div class="input-group spinner">
                         <input type="text" class="form-control" value="0">
                         <div class="input-group-btn-vertical">
