custome2-process-logs

--- a/modules/frontend-web-customer-2/src/main/resources/html/dossier_emp_detail.html
+++ b/modules/frontend-web-customer-2/src/main/resources/html/dossier_emp_detail.html
@@ -543,6 +543,7 @@
 				<div class="col-md-12 portlet-column portlet-column-only yui3-dd-drop" id="column-1"> 
 
 					<!-- include "../templates/employee/dossier_emp_index.ftl" -->
+					<#include "../templates/customer_dossier_detail_4.ftl">
 
 				</div> 
 
